--- a/.env
+++ b/.env
@@ -16,12 +16,12 @@ NEXT_PUBLIC_S3_BUCKET_NAME = chatpdf-file
 
 # Pinecone Environment
 
-PINECONN_API_KEY = 777f9906-cef2-4654-8c0f-476a13f07c6b
-PINECONE_ENVIRONMENT = us-central1-gcp-starter
+PINECONN_API_KEY = 0ce01e72-829e-4072-8fa8-19e7b32ec9f1
+PINECONE_ENVIRONMENT = gcp-starter
 
 # openai api
 
-OPENAI_API_KEY = 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
+OPENAI_API_KEY = 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
 
 # Do not expose your Neon credentials to the browser
 
