remove stripe code

--- a/.env
+++ b/.env
@@ -21,8 +21,7 @@ PINECONE_ENVIRONMENT = gcp-starter
 
 # openai api
 
-OPENAI_API_KEY = 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
-
+OPENAI_API_KEY =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
 # Do not expose your Neon credentials to the browser
 
 PGHOST='ep-morning-glade-a13e3rvs.ap-southeast-1.aws.neon.tech'
